# civic-data-boundaries-us-forests

./: .gitignore  DEVELOPER.md  README.md  mkdocs.yml  pyproject.toml  seted.ps1  setup.ps1
.github/workflows/: tests.yml
data-config/: us_forest_districts.yaml  us_forests.yaml
data-out/: index.json
data-out/forests/admiralty_national_monument/: admiralty_national_monument.geojson
data-out/forests/almanor_ranger_district/: almanor_ranger_district.geojson
data-out/forests/alpine_ranger_district/: alpine_ranger_district.geojson
data-out/forests/amador_ranger_district/: amador_ranger_district.geojson
data-out/forests/american_river_ranger_district/: american_river_ranger_district.geojson
data-out/forests/andrew_pickens_ranger_district/: andrew_pickens_ranger_district.geojson
data-out/forests/androscoggin_ranger_district/: androscoggin_ranger_district.geojson
data-out/forests/angelina_ranger_district/: angelina_ranger_district.geojson
data-out/forests/apalachicola_ranger_district/: apalachicola_ranger_district.geojson
data-out/forests/ashland_ranger_district/: ashland_ranger_district.geojson
docs/: 404.html  index.html
docs/api/: API.yaml  civic_data_boundaries_us_forests.chunk.md  civic_data_boundaries_us_forests.cleanup.md  civic_data_boundaries_us_forests.cli.cli.md  civic_data_boundaries_us_forests.export.md  civic_data_boundaries_us_forests.fetch.md  civic_data_boundaries_us_forests.index.md  civic_data_boundaries_us_forests.utils.chunk_utils.md  civic_data_boundaries_us_forests.utils.export_utils.md  civic_data_boundaries_us_forests.utils.get_paths.md  index.html
docs/search/: search_index.json
mkdocs_src/api/: chunk.md  cleanup.md  cli.cli.md  export.md  fetch.md  index.md  utils.chunk_utils.md  utils.export_utils.md  utils.get_paths.md
src/civic_data_boundaries_us_forests/: __main__.py  chunk.py  cleanup.py  export.py  fetch.py  index.py
tests/: test_cli_cli.py
(+500 files in other folders)
